@@ -23,7 +23,8 @@ $tpl = $modx->getOption('tpl',$scriptProperties,'babelLink');
 $activeCls = $modx->getOption('activeCls',$scriptProperties,'active');
 
 $contextKeys = $babel->getGroupContextKeys($modx->resource->get('context_key'));
-$linkedResources = $babel->decodeBabelTv($modx->resource->get('id'));
+$babelTvValue = $babel->babelTv->getValue($modx->resource->get('id'));
+$linkedResources = $babel->decodeTranslationLinks($babelTvValue);
 
 $output = '';
 
